--- a/static/regression/regression10.Rmd
+++ b/static/regression/regression10.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "STA 506 2.0 Linear Regression Analysis"
-subtitle: "Lecture : Identifying Outliers and Influential Cases"
+subtitle: "Lecture 12-i: Identifying Outliers and Influential Cases"
 author: "Dr Thiyanga S. Talagala"
 date: "2020-11-20"
 output:
@@ -28,9 +28,8 @@ options(htmltools.dir.version = FALSE)
 
 <!--https://stattrek.com/regression/influential-points.aspx-->
 
-## Introduction
 
----
+
 
 ## What exactly is an outlier?
 
@@ -76,6 +75,189 @@ ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_
 ]
 
 ---
+
+
+## Outliers should be carefully studied for
+
+1. why they occurred and 
+
+2. whether they should be retained in the model.
+
+---
+
+##Types of outliers that occur in the context of regression
+
+1. regression outlier
+
+2. residual outlier
+
+3. x-space outlier
+
+4. y-space outlier
+
+5. x- and y-space outlier
+
+---
+
+## 1. Regression outlier
+
+- lies off the line fit to the other 15 observations
+
+- determined from the remaining $(n-1)$ observations.
+
+```{r, echo=FALSE, comment=NA, message=FALSE, warning=FALSE, fig.height=5, fig.width=5}
+library(tidyverse)
+x <- c(1, 1, 2, 3, 3.5, 4, 6, 6.5, 6.5, 7, 7.2, 8.2, 8.5, 9, 10, 20)
+set.seed(2020)
+y <- (5 + 10*x) + rnorm(16)
+z <- factor(c(rep(1, 15), rep(2, 1)))
+data <- data.frame(y=y, x=x, z=z)
+ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) +
+  geom_smooth(method="lm")+
+  scale_colour_manual(values = c("black", "red")) + theme(legend.position = "none") 
+
+```
+
+---
+
+## 2. Residual outlier 
+
+A point that has large standardized or studentized residual when it is used with all $n$ observations to fit a model.
+
+
+.pull-left[
+```{r, echo=FALSE, comment=NA, message=FALSE, warning=FALSE, fig.height=6, fig.width=6}
+library(tidyverse)
+x <- c(1, 1, 2, 3, 3.5, 4, 6, 6.5, 6.5, 7, 7.2, 8.2, 8.5, 9, 10, 20)
+set.seed(2020)
+y <- c((5 + 10*x[1:15]) + rnorm(15), 500)
+z <- factor(c(rep(1, 15), rep(2, 1)))
+data <- data.frame(y=y, x=x, z=z)
+ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_manual(values = c("black", "red")) + theme(legend.position = "none")
+example.data <- data.frame(y=y, x=x)
+
+```
+
+
+]
+
+
+.pull-right[
+```{r, echo=FALSE, comment=NA, message=FALSE, warning=FALSE}
+example.data
+```
+
+]
+
+
+
+---
+
+## 2. Residual outlier (cont.)
+
+
+```{r, comment=NA, message=FALSE, warning=F, fig.height=5, fig.width=5}
+lmfit <- lm(y~x, data=example.data)
+library(broom)
+augment(lmfit)
+
+```
+
+---
+
+## 2. Residual outlier (cont.)
+
+Distribution of `.std.resid` in the previous output.
+
+```{r, comment=NA, message=FALSE, warning=F, fig.height=5, fig.width=5, echo=FALSE}
+a <- augment(lmfit)
+ggplot(data=a, aes(y=.std.resid, x="")) + geom_boxplot() + xlab("")
+
+```
+
+---
+
+## 3. X-space outlier
+
+.pull-left[
+```{r, echo=FALSE, comment=NA, message=FALSE, warning=FALSE}
+library(tidyverse)
+x <- c(1, 1, 2, 3, 3.5, 4, 6, 6.5, 6.5, 7, 7.2, 8.2, 8.5, 9, 10, 20)
+set.seed(2020)
+y <- c((5 + 10*x[1:15]) + rnorm(15), 50)
+z <- factor(c(rep(1, 15), rep(2, 1)))
+data <- data.frame(y=y, x=x, z=z)
+ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_manual(values = c("black", "red")) + theme(legend.position = "none")
+
+```
+]
+
+.pull-right[
+
+### Hight leverage point
+
+A data point can be unusual in its x variables.
+
+]
+
+---
+
+## 4. Y-space outlier
+
+.pull-left[
+
+```{r, echo=FALSE, comment=NA, message=FALSE, warning=FALSE}
+library(tidyverse)
+x <- c(1, 1, 2, 3, 3.5, 4, 6, 6.5, 6.5, 7, 7.2, 8.2, 8.5, 9, 10, 9)
+set.seed(2020)
+y <- c((5 + 10*x[1:15]) + rnorm(15), 300)
+z <- factor(c(rep(1, 15), rep(2, 1)))
+data <- data.frame(y=y, x=x, z=z)
+ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_manual(values = c("black", "red")) + theme(legend.position = "none")
+
+```
+
+]
+
+
+.pull-right[
+
+### High discrepancy point
+
+
+A point has an unusual y-value given its x-value.
+
+
+]
+
+
+---
+## 5. X- and Y-space outlier
+
+
+.pull-left[
+```{r, echo=FALSE, comment=NA, message=FALSE, warning=FALSE}
+library(tidyverse)
+x <- c(1, 1, 2, 3, 3.5, 4, 6, 6.5, 6.5, 7, 7.2, 8.2, 8.5, 9, 10, 20)
+set.seed(2020)
+y <- c((5 + 10*x[1:15]) + rnorm(15), 500)
+z <- factor(c(rep(1, 15), rep(2, 1)))
+data <- data.frame(y=y, x=x, z=z)
+ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_manual(values = c("black", "red")) + theme(legend.position = "none")
+
+```
+
+]
+
+
+.pull-right[
+
+point that has both high leverage and high discrepancy
+
+]
+
+---
+
 
 ## Least-squares regression fit
 
@@ -162,88 +344,6 @@ ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_
 Red line: all data including the  red point.
 
 Green line: for all black point (without red point).
-
-
----
-
-## 1. A data point can be unusual in its x-value
-
-.pull-left[
-```{r, echo=FALSE, comment=NA, message=FALSE, warning=FALSE}
-library(tidyverse)
-x <- c(1, 1, 2, 3, 3.5, 4, 6, 6.5, 6.5, 7, 7.2, 8.2, 8.5, 9, 10, 20)
-set.seed(2020)
-y <- c((5 + 10*x[1:15]) + rnorm(15), 50)
-z <- factor(c(rep(1, 15), rep(2, 1)))
-data <- data.frame(y=y, x=x, z=z)
-ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_manual(values = c("black", "red")) + theme(legend.position = "none")
-
-```
-]
-
-.pull-right[
-
-### Hight leverage point
-
-x-value is either much higher or lower than the mean of the predictor.
-
-]
-
----
-
-## 2. A data point can be unusual in its y-value
-
-.pull-left[
-
-```{r, echo=FALSE, comment=NA, message=FALSE, warning=FALSE}
-library(tidyverse)
-x <- c(1, 1, 2, 3, 3.5, 4, 6, 6.5, 6.5, 7, 7.2, 8.2, 8.5, 9, 10, 9)
-set.seed(2020)
-y <- c((5 + 10*x[1:15]) + rnorm(15), 300)
-z <- factor(c(rep(1, 15), rep(2, 1)))
-data <- data.frame(y=y, x=x, z=z)
-ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_manual(values = c("black", "red")) + theme(legend.position = "none")
-
-```
-
-]
-
-
-.pull-right[
-
-### High discrepancy point
-
-
-A point has an unusual y-value given its x-value.
-
-
-]
-
-
----
-## 3. A data point can be unusual in its x-value and y-value
-
-
-.pull-left[
-```{r, echo=FALSE, comment=NA, message=FALSE, warning=FALSE}
-library(tidyverse)
-x <- c(1, 1, 2, 3, 3.5, 4, 6, 6.5, 6.5, 7, 7.2, 8.2, 8.5, 9, 10, 20)
-set.seed(2020)
-y <- c((5 + 10*x[1:15]) + rnorm(15), 500)
-z <- factor(c(rep(1, 15), rep(2, 1)))
-data <- data.frame(y=y, x=x, z=z)
-ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_manual(values = c("black", "red")) + theme(legend.position = "none")
-
-```
-
-]
-
-
-.pull-right[
-
-point that has both high leverage and high discrepancy
-
-]
 
 ---
 
@@ -370,7 +470,7 @@ This cut off does not apply $\frac{2p}{n} > 1$.
 
 ## Influence
 
-- a point with high leverage can dramatically impact the regreassion model.
+- a point with high leverage can dramatically impact the regression model.
 
 .pull-left[
 
@@ -414,7 +514,7 @@ ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_
 
 ## Measure of Influence (cont.)
 
-Cook's distance, $D_i$, is a measure of influence.
+[Cook's distance](https://en.wikipedia.org/wiki/Cook%27s_distance), $D_i$, is a measure of influence.
 
 
 ```{r, comment=NA, message=FALSE, warning=FALSE}
@@ -427,7 +527,7 @@ augment(data.fit)
 
 ## Measure of Influence (cont.)
 
- - We usually consider points for which  $D_i > 1$ to be influencital (Montgomery, et al.).
+ - We usually consider points for which  $D_i > 1$ to be influential (Montgomery, et al.).
  
 ```{r, comment=NA, message=FALSE, warning=FALSE, echo=FALSE}
 augment(data.fit)
@@ -436,45 +536,68 @@ augment(data.fit)
 <!--Interpretations: page 213-->
 
 ---
-## Measure of Influence (cont.)
+## Leverage and Influence 
 
 Remember that leverage alone does not mean a point exerts high influence, but it certainly means it's worth investigating. 
----
--
 
-- The field of **robust statistics** is concerned with more advanced methods of dealing with outliers
-
-<!--The field of robust statistics is concerned with more sophisticated ways of dealing with outliers-->
 
 ---
-## Influential
+## Influence
 
-```{r,fig.height=6, comment=NA, message=FALSE, warning=FALSE}
-library(ggfortify)
-autoplot(data.fit)
+- An **influence point**, can make a noticeable impact on the model coefficients in that it pulls the regression model in its direction.
+
+.pull-left[
+
+**All points**
+
+```{r, echo=FALSE, comment=NA, message=FALSE, warning=FALSE, fig.height=5, fig.width=5}
+library(tidyverse)
+x <- c(1, 1, 2, 3, 3.5, 4, 6, 6.5, 6.5, 7, 7.2, 8.2, 8.5, 9, 10, 20)
+set.seed(2020)
+y <- c((5 + 10*x[1:15]) + rnorm(15), 500)
+z <- factor(c(rep(1, 15), rep(2, 1)))
+data <- data.frame(y=y, x=x, z=z)
+ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_manual(values = c("black", "red")) + theme(legend.position = "none") + geom_abline(slope=22.65, intercept=-58.30, col="red", lwd=2) 
+
+```
+
+]
+
+.pull-right[
+
+**Only black points (green)**
+
+```{r, echo=FALSE, comment=NA, message=FALSE, warning=FALSE, fig.height=5, fig.width=5}
+library(tidyverse)
+x <- c(1, 1, 2, 3, 3.5, 4, 6, 6.5, 6.5, 7, 7.2, 8.2, 8.5, 9, 10, 20)
+set.seed(2020)
+y <- c((5 + 10*x[1:15]) + rnorm(15), 500)
+z <- factor(c(rep(1, 15), rep(2, 1)))
+data <- data.frame(y=y, x=x, z=z)
+ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_manual(values = c("black", "red")) + theme(legend.position = "none") + geom_abline(slope=22.65, intercept=-58.30, col="red", lwd=2) + 
+  geom_abline(slope=10.108, intercept=4.383, col="forestgreen", lwd=2)
+
 ```
 
 
----
-
-## Assessing discrepancy
+]
 
 ---
 
-## Assessing influence
+## Other Measures of Influence
 
----
-## Test Your Understanding
-In the context of regression analysis, which of the following statements are true?
+- DEFITS and DFBEATAS
 
-I. When the data set includes an influential point, the data set is nonlinear.
-II. Influential points always reduce the coefficient of determination.
-III. All outliers are influential data points.
+## Treatment of Influential Observations
 
-<!--https://stattrek.com/regression/influential-points.aspx-->
+- Should influential points ever be discarded? If there is a recording error, measurement error, or if the sample point is invalid or not part of the population that was intended to be sampled, then deleting the point is appropriate. 
+
+- The field of **robust statistics** is concerned with more advanced methods of dealing with influential outliers. For e.g.: **down weight** observations in proportional to residual magnitude or influence. Then highly influential observations will receive less weight that they would in a least-squares fit. 
+e.g: Robust regression 
+
+<!--The field of robust statistics is concerned with more sophisticated ways of dealing with outliers-->
 
 
-<!--The correct answer is (E). Data sets with influential points can be linear or nonlinear. In this lesson, we went over an example in which an influential point increased the coefficient of determination. With respect to regression, outliers are influential only if they have a big effect on the regression equation. Sometimes, outliers do not have big effects. For example, when the data set is very large, a single outlier may not have a big effect on the regression equation.-->
 
 ---
 
