--- a/static/regression/regression10.Rmd
+++ b/static/regression/regression10.Rmd
@@ -350,7 +350,7 @@ Green line: for all black point (without red point).
 
 ## Assessing leverage
 
-**Hat value:** Helps  to identify extreme $X$ values.
+**Hat (leverages) value:** Helps  to identify extreme $X$ values.
 
 **In simple linear regression**
 
@@ -403,7 +403,7 @@ $$H = X(X'X)^{-1}X'$$
 
 Hat matrix diagonal is a standardized measure of the distance of the $i$th observation from the center (or centroid) of the $x-$space.
 
-The leverage value $h_{ii}$ does not depend on the response $Y_i$.
+The leverage (hat) value $h_{ii}$ does not depend on the response $Y_i$.
 ---
 
 ## Assessing leverage: Example
@@ -508,7 +508,7 @@ ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_
 
 ]
 
-- Influence - measures how much impact a point has on the regression mode
+- Influence - measures how much impact a point has on the regression model
 
 ---
 
