--- a/public/regression/regression10.Rmd
+++ b/public/regression/regression10.Rmd
@@ -592,7 +592,7 @@ ggplot2::ggplot(data, aes(y=y, x=x, col=z)) + geom_point(size=4) + scale_colour_
 
 - Should influential points ever be discarded? If there is a recording error, measurement error, or if the sample point is invalid or not part of the population that was intended to be sampled, then deleting the point is appropriate. 
 
-- The field of **robust statistics** is concerned with more advanced methods of dealing with influential outliers. For e.g.: **down weight** observations in proportional to residual magnitude or influence. Then highly influential observations will receive less weight that they would in a least-squares fit. 
+- The field of **robust statistics** is concerned with more advanced methods of dealing with influential outliers. For e.g.: **down weight** observations in proportional to residual magnitude or influence. Then highly influential observations will receive less weight than they would in a least-squares fit. 
 e.g: Robust regression 
 
 <!--The field of robust statistics is concerned with more sophisticated ways of dealing with outliers-->
