--- a/public/regression/regression11.Rmd
+++ b/public/regression/regression11.Rmd
@@ -37,7 +37,7 @@ options(htmltools.dir.version = FALSE)
 
 - Categorical variables can be incorporated into regression through **indicator variables**.
 
-- Sometimes indicator variables are calle **dummy variable.**
+- Sometimes indicator variables are called **dummy variable.**
 
 
 ---
@@ -93,6 +93,7 @@ $$D_i = \left\{
 Regression equation
 
 $$y_i = \beta_0 + \beta_1 x_i + \beta_2D_i + \epsilon_i,$$
+where $x$ represents the variable `BMI`.
 
 ---
 
@@ -121,6 +122,7 @@ $$y_i = \beta_0 + \beta_1 x_i + \epsilon_i,$$
 ---
 ## Regression equation (cont.)
 
+.pull-left[
 Regression equation for **males**, $D_i = 1$
 
 $$y_i = (\beta_0 +  \beta_2) + \beta_1 x_i + \epsilon_i,$$
@@ -128,10 +130,16 @@ $$y_i = (\beta_0 +  \beta_2) + \beta_1 x_i + \epsilon_i,$$
 Regression equation for **females**, $D_i = 0$
 
 $$y_i = \beta_0 + \beta_1 x_i + \epsilon_i,$$
+]
 
+.pull-right[
+![height=1](dummy.PNG)
+]
 ---
 
 .pull-left[
+
+![](dummy.PNG)
 
 
 ]
@@ -146,7 +154,7 @@ $$y_i = \beta_0 + \beta_1 x_i + \epsilon_i,$$
 
 
 
-- $\beta_1$ - Change in the mean response, $\mu_Y$ for each additional unit increase in the BMI when other variables held at constant.
+- $\beta_1$ - Change in the mean response, $\mu_Y$, for each additional unit increase in the BMI when other variables held at constant.
 
 - $\beta_2$ is a measure of how much higher (or lower) the mean response of the male group is than that of the female group.
 
@@ -161,8 +169,8 @@ In general, a qualitative variable with $k$ levels is represented by $k-1$ indic
 
 .pull-left[
 ```{r, comment=NA, message=FALSE, echo=FALSE}
-data <- data.frame(IQ=c(10, 20, 100, 98, 100, 11, 50, 70), Gender = c("Normal", "Normal", "Obese", "Obese", "Underweight", "Underweight", 
-  "Underweight", "Underweight"), BMI = c(20.2, 20.5, 18.5, 25, 24.9, 31, 18.5, 20),
+data <- data.frame(IQ=c(10, 20, 100, 98, 100, 11, 50, 70), BMI = c("Normal", "Normal", "Obese", "Obese", "Underweight", "Underweight", 
+  "Underweight", "Underweight"), headcir = c(50.2, 50.5, 58.5, 55, 54.9, 40, 48.5, 50),
 D1 =c(0, 0, 0, 0, 1, 1, 1, 1),
 D2 = c(1, 1, 0, 0, 0, 0, 0, 0))
 data
@@ -200,6 +208,14 @@ $$D_{2i} = \left\{
 ## Your turn
 
 Write the regression equations for the three levels.
+
+```{r, comment=NA, message=FALSE, echo=FALSE}
+data <- data.frame(IQ=c(10, 20, 100, 98, 100, 11, 50, 70), headcir = c(50.2, 50.5, 58.5, 55, 54.9, 40, 48.5, 50),
+D1 =c(0, 0, 0, 0, 1, 1, 1, 1),
+D2 = c(1, 1, 0, 0, 0, 0, 0, 0))
+data
+
+```
 
 ---
 
