--- a/content/reg2020.md
+++ b/content/reg2020.md
@@ -23,3 +23,6 @@ title: 📚
 15. 📚 [Transformations to Correct Model Inadequacies](/regression/regression9.html)
 16. 📚 [Identifying Outliers and Influential Cases](/regression/regression10.html)
 17. 📚 [Indicator Variables](/regression/regression11.html)
+18. 📚 [Indicator Variables (cont) and Variable Selection](/regression/regression12.pdf)
+19. [real-estate data](/regression/real-estate.csv)
+source: http://www.stat.cmu.edu/~cshalizi/mreg/15/hw/08/real-estate.csv
