--- a/content/reg2020.md
+++ b/content/reg2020.md
@@ -29,3 +29,4 @@ source: http://www.stat.cmu.edu/~cshalizi/mreg/15/hw/08/real-estate.csv
 20. [real-estate questions](/regression/variableSelectionproblem.pdf)
 21. [Multicollinearity](/regression/regression13.pdf)
 22. [Multicollinearity](/regression/multicollinearity_questions.pdf)
+23. [Bootstrap for Regression](/regression/regression14.pdf)
