--- a/static/regression/modelquestions_discussions.Rmd
+++ b/static/regression/modelquestions_discussions.Rmd
@@ -30,6 +30,11 @@ i) The two variables are supposed to have a linear relationship. Write the model
 
 \newpage
 
+\textcolor{blue}{Answer}
+
+
+\newpage
+
 A regression analysis was performed with these data and the following outputs were obtained using R.
 
 
@@ -84,6 +89,13 @@ ii)	Two undergraduates studying statistics were looking at this analysis.
 
 With whom would you agree? Justify your argument using each part ((a) to (e)) of the results given. 
 
+
+
+
+\textcolor{blue}{Answer}
+
+\newpage
+
 ## Question 2
 
 In a soap production factory, there are two machines used for the production. Using 27 production runs; 15 of line 1 and 12 of line 2, the management wanted to find the relationship between the machine speed and the amount of scrap produced during the production process. To allow the two machines have different regression lines with different intercepts and slopes the following model was fitted with all 27 observations.
@@ -103,10 +115,29 @@ $X_1$ is line speed and
 \end{equation}
 
  i)	Draw a sketch of the scatter plot which is expected with the above model.
+
+ \textcolor{blue}{Answer}
+ 
+ \newpage
+ 
+ \textcolor{blue}{Answer}
+
+ \newpage
  
 ii)	Write the model for each line.
 
+
+ \textcolor{blue}{Answer}
+ 
+ \newpage
+ 
+
+
 iii) Write the hypotheses that should be tested to find whether the two machines have the same regression model or not, i.e. whether both the intercept and the slope are the same of the two models you wrote in ii) in the above. 
+
+ \textcolor{blue}{Answer}
+ 
+ \newpage
 
 ## Question 3
 
@@ -137,7 +168,19 @@ A statistician examined these results and claimed that “multicollinearity” h
 
 i) What is meant by multicollinearity? 
 
+ \textcolor{blue}{Answer}
+ 
+ \newpage
+ 
+ \textcolor{blue}{Answer}
+ 
+ \newpage
+
 ii) Do you agree with statistician claim. Justify your answer.
+
+ \textcolor{blue}{Answer}
+ 
+  \newpage
 
 The following outputs are obtained using R
 
@@ -148,9 +191,23 @@ as.data.frame(augment(model.sjp))
 
 iii) Are there any observations that have high leverage values? If so, what are the observation numbers.
 
+ \textcolor{blue}{Answer}
+ 
+ \newpage
+ 
+ \textcolor{blue}{Answer}
+
+\newpage
+
 iv) Are there any observations that are outliers? If so, what are the sample observation numbers?
 
+ \textcolor{blue}{Answer}
+ 
+ \newpage
+ 
+ \textcolor{blue}{Answer}
 
+\newpage
 
 ## Question 4
 
@@ -158,9 +215,23 @@ it is required to study the relationship between age ($X$) and girth ($Y$) of te
 
 i) Write the simple linear regression model that you would be fitted for the above variables. Define all terms in it and state any assumptions regarding the model. 
 
+ 
+ \textcolor{blue}{Answer}
+
+\newpage
+
 ii) Later it was suggested that a linear model goes through the origin is suitable for this situation. Write the new model using the usual notation.
 
+ 
+ \textcolor{blue}{Answer}
+
+\newpage
+
 iii) The estimated regression model in part (ii) satisfied all of the assumptions regarding the error term. Sketch the residual plot vs fitted values and Q-Q normality plot of residuals.
+
+ \textcolor{blue}{Answer}
+
+\newpage
 
 ## Question 5
 
@@ -182,7 +253,23 @@ anova(mod5)
 
 i) Construct the ANOVA table using the above results.
 
+ \textcolor{blue}{Answer}
+
+\newpage
+
+\textcolor{blue}{Answer}
+
+\newpage
+
 ii) Write the hypothesis to be tested in the ANOVA in part i.
 
+\newpage
+
+\textcolor{blue}{Answer}
+
 iii) What is your decision about the fitted model.
+
+\newpage
+
+\textcolor{blue}{Answer}
 
