--- a/content/ees211.md
+++ b/content/ees211.md
@@ -5,7 +5,7 @@ title: "EES211 2.0 Data Analysis and Modeling"
 
 ## Week 1: 7 July 2022
 
-[Slides](/ees211_1.html/)
+[Slides](/ees211/ees211_1.html/)
 
 [Reading](https://rstudio-education.github.io/hopr/basics.html)
 
