--- a/content/ees211.md
+++ b/content/ees211.md
@@ -11,7 +11,9 @@ title: "EES211 2.0 Data Analysis and Modeling"
 
 [Exercise](https://thiyangt.github.io/rworkbook/index.html)
 
-## Week 2
+## Week 2: 14 July 2022
+
+[Slides](https://hellor.netlify.app/slides/l122021.html#1)
 
 ## Week 3
 
