--- a/content/ees211.md
+++ b/content/ees211.md
@@ -15,13 +15,15 @@ title: "EES211 2.0 Data Analysis and Modeling"
 
 [Slides](https://hellor.netlify.app/slides/l122021.html#1)
 
-## Week 4: 28 July 2022
+## Week 4-5: 28 July 2022/ 29 July 2022
 
-[Slides - 3.1: Introduction to regression analysis](/ees211/regression/regression1.html)
+[Slides - 4.1: Introduction to regression analysis](/ees211/regression/regression1.html)
 
-[Slides - 3.2: Simple linear regression analysis](/ees211/regression/regression2.html)
+[Slides - 4.2: Simple linear regression analysis](/ees211/regression/regression2.html)
 
-## Week 5
+## Week 6
+
+[Slides ](/ees211/regression/regression3.html)
 
 ## Week 6
 
