--- a/content/ees211.md
+++ b/content/ees211.md
@@ -25,9 +25,12 @@ title: "EES211 2.0 Data Analysis and Modeling"
 
 [Slides ](/ees211/regression/regression3.html)
 
-## Week 6
-
 ## Week 7
+
+[Slides ](/ees211/regression/regression4_ees.html)
+
+[Slides ](/ees211/regression/regression5_ees.html)
+
 
 ## Week 8
 
@@ -40,4 +43,6 @@ title: "EES211 2.0 Data Analysis and Modeling"
 ## Week 12
 
 ## Week 13
+
+
 
