--- a/content/ees211.md
+++ b/content/ees211.md
@@ -34,6 +34,13 @@ title: "EES211 2.0 Data Analysis and Modeling"
 
 ## Week 8
 
+[Slides ](/regression/regression7_anova.html)
+
+[Slides ](/regression/regression10_ees.html)
+
+
+
+
 ## Week 9
 
 ## Week 10
