--- a/content/ees211.md
+++ b/content/ees211.md
@@ -43,7 +43,7 @@ title: "EES211 2.0 Data Analysis and Modeling"
 
 ## Week 9
 
-[Slides][/slides/ees211/clustering.html]
+[Slides](/slides/ees211/clustering.html)
 
 ## Week 10
 
