--- a/content/ees211.md
+++ b/content/ees211.md
@@ -32,7 +32,7 @@ title: "EES211 2.0 Data Analysis and Modeling"
 [Slides ](/regression/regression5_ees.html)
 
 
-## Week 8
+## Week 8-9
 
 [Slides ](/regression/regression7_anova.html)
 
@@ -41,17 +41,20 @@ title: "EES211 2.0 Data Analysis and Modeling"
 
 
 
-## Week 9
+## Week 10-11
 
 [Slides](/ees211/clustering.html)
 
-## Week 10
-
-## Week 11
-
 ## Week 12
 
+[Slides](/ees211/machine_learning.html)
+
+
 ## Week 13
+
+## Week 14
+
+## Week 15
 
 
 
